Add full resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -9,152 +9,217 @@ permalink: /resume/
 <div class="text-center">Hoboken, New Jersey 07030</div>
 <div class="text-center">(973) 768-5511</div>
 <div class="text-center">E-mail: greg |at| greg-jacobs.com</div>
-<div class="text-center">Github: https://github.com/gregjacobs</div>
+<div class="text-center">Github: <a href="https://github.com/gregjacobs">https://github.com/gregjacobs</a></div>
 
-<table>
-    <tr>
-        <td>Career Objective:</td>
-        <td>
-            High level software or web application development position with long term growth potential.
-        </td>
-    </tr>
+<table class="resume-table mt10">
+	<tr class="resume-table__row">
+		<td class="bold">Career Objective:</td>
+		<td>
+			High level software or web application development position with long term growth potential.
+		</td>
+	</tr>
 
-    <tr>
-        <td>Description:</td>
-        <td>
-            Expert-level JavaScript and software engineer with extensive experience in web application and JavaScript library development, mainly specializing in front end rich application development using ExtJS, AngularJS, and jQuery, and also back end technologies such as Node.js, Java, ColdFusion, PHP, and Microsoft SQL Server.
-        </td>
-    </tr>
+	<tr class="resume-table__row">
+		<td class="bold">Description:</td>
+		<td>
+			Expert-level JavaScript and software engineer with extensive experience in web application and JavaScript library development, mainly specializing in front end rich application development using ExtJS, AngularJS, and jQuery, and also back end technologies such as Node.js, Java, ColdFusion, PHP, and Microsoft SQL Server.
+		</td>
+	</tr>
 
-    <tr>
-        <td>Education:</td>
-        <td>
-            Fairleigh Dickinson University, Madison, NJ<br />
-            Bachelor of Science in Computer Science<br />
-            Class of 2007
-        </td>
-    </tr>
+	<tr class="resume-table__row">
+		<td class="bold">Education:</td>
+		<td>
+			Fairleigh Dickinson University, Madison, NJ<br />
+			Bachelor of Science in Computer Science<br />
+			Class of 2007
+		</td>
+	</tr>
 
-    <tr>
-        <td>Computer Skills:</td>
-        <td>
-            Highly proficient and experienced with JavaScript, HTML, and CSS on
-            the front end, and Java, ColdFusion, PHP, and Microsoft SQL Server
-            on the backend. I mainly have worked with jQuery, AngularJS, and
-            ExtJS front end libraries, but have also used YUI on a large project
-            as well.<br /><br />
+	<tr class="resume-table__row">
+		<td class="bold">Computer Skills:</td>
+		<td>
+			Highly proficient and experienced with JavaScript, HTML, and CSS on
+			the front end, and Java, ColdFusion, PHP, and Microsoft SQL Server
+			on the backend. I mainly have worked with jQuery, AngularJS, and
+			ExtJS front end libraries, but have also used YUI on a large project
+			as well.<br /><br />
 
-            My true passion is software engineering in general, where OOP, API
-            design, and automated testing have been at the forefront of my
-            interests.<br /><br />
+			My true passion is software engineering in general, where OOP, API
+			design, library design, and automated testing have been at the
+			forefront of my interests.<br /><br />
 
-            Other programming and development skills include C++, C#, PHP, Flash
-            (ActionScript 3), and MySQL/Oracle Database Servers.
-        </td>
-    </tr>
+			Other programming and development skills include C++, C#, PHP, Flash
+			(ActionScript 3), and MySQL/Oracle Database Servers.
+		</td>
+	</tr>
 
-    <!-- Morgan Stanley -->
-    <tr>
-        <td>Related Experience:</td>
-        <td>Morgan Stanley. New York, NY</td>
-    </tr>
-    <tr>
-        <td>Aug 2014 – Present</td>
-        <td>
-            VP, Wealth Management
+	<!-- Morgan Stanley -->
+	<tr>
+		<td class="bold">Related Experience:</td>
+		<td class="bold">Morgan Stanley. New York, NY</td>
+	</tr>
+	<tr class="resume-table__row">
+		<td>Aug 2014 – Present</td>
+		<td>
+			<div class="italic">VP, Wealth Management</div>
 
-            Develop and engineer the Morgan Stanley Wealth Management mobile banking application, which is a hybrid AngularJS web application running on top of a thin native shim for iOS and Android.
-            Responsible for large parts of the app including mobile check capture and deposit, a library of UI components, the model/service-layer architecture, error handling, and server-side endpoint design.
-            Lead the team in creating an environment of robust and effective software engineering practices which includes MVC/MVVM architecture, clean/reusable design, and automated testing.
-        </td>
-    </tr>
+			<ul>
+				<li>
+					Develop and engineer the Morgan Stanley Wealth Management
+					mobile banking application, which is a hybrid AngularJS web
+					application running on top of a thin native shim for iOS and
+					Android.
+				</li>
+				<li>
+					Responsible for large parts of the app including mobile
+					check capture and deposit, a library of UI components, the
+					model/service-layer architecture, error handling, and
+					server-side endpoint design.
+				</li>
+				<li>
+					Lead the team in creating an environment of robust and
+					effective software engineering practices which includes
+					MVC/MVVM architecture, clean/reusable design, and automated
+					testing.
+				</li>
+			</ul>
+		</td>
+	</tr>
 
-    <!-- Credit Suisse -->
-    <tr>
-        <td></td>
-        <td>Credit Suisse Group. New York, NY</td>
-    </tr>
-    <tr>
-        <td>Aug 2012 – Aug 2014</td>
-        <td>
-            Lead Front-End Engineer
-            Built out Research & Analytics applications for Credit Suisse's clients using ExtJS, and then an internal jQuery-based application/UI library used as a lightweight ExtJS alternative.
-            Implemented systems for the searching and automatic delivery of content, along with interactive analytics charting, market data, and subscription management.
-            Redesigned and reworked the existing system to bring in an MVC architecture for reusability, extensibility, and testability, while greatly reducing the codebase’s size and complexity.
-        </td>
-    </tr>
+	<!-- Credit Suisse -->
+	<tr>
+		<td></td>
+		<td class="bold">Credit Suisse Group. New York, NY</td>
+	</tr>
+	<tr class="resume-table__row">
+		<td>Aug 2012 – Aug 2014</td>
+		<td>
+			<div class="italic">Lead Front-End Engineer</div>
 
-    <!-- Jux -->
-    <tr>
-        <td></td>
-        <td>
-            Jux, LLC. New York, NY<br />
-            Startup company creating a content-centric social media and sharing
-            experience.
-        </td>
-    </tr>
-    <tr>
-        <td>Nov 2010 – Aug 2012</td>
-        <td>
-            Lead Front-End Engineer
-            <ul>
-                <li>
-                    Responsible for implementing the full content display
-                    solution, and its editing tools.
-                </li>
-                <li>
-                    Built out the architecture of the system, rewrote and
-                    maintained the internal library, and built a structured
-                    framework for UI components to allow for the instantiation
-                    of dynamically generated, feature rich controls based on
-                    metadata.
-                </li>
-            </ul>
-        </td>
-    </tr>
+			<ul>
+				<li>
+					Built out Research & Analytics applications for Credit
+					Suisse's clients using ExtJS, and then an internal
+					jQuery-based application/UI library used as a lightweight
+					ExtJS alternative.
+				</li>
+				<li>
+					Implemented systems for the searching and automatic delivery
+					of content, along with interactive analytics charting,
+					market data, and subscription management.
+				</li>
+				<li>
+					Redesigned and reworked the existing system to bring in an
+					MVC architecture for reusability, extensibility, and
+					testability, while greatly reducing the codebase’s size and
+					complexity.
+				</li>
+			</ul>
+		</td>
+	</tr>
 
-    <!-- EdSoft Design -->
-    <tr>
-        <td></td>
-        <td>
-            Educational Software Design, LLC. Morris Plains, NJ<br />
-            Small startup company providing web-based software to New Jersey
-            school districts, specializing in student data management
-            applications, testing scores, state reporting, and district-specific
-            management software.
-        </td>
-    </tr>
-    <tr>
-        <td>Jun 2008 – Nov 2010</td>
-        <td>
-            President, Lead Software Developer
+	<!-- Jux -->
+	<tr>
+		<td></td>
+		<td>
+			<div class="bold">Jux, LLC. New York, NY</div>
+			Startup company creating a content-centric social media and sharing
+			experience.
+		</td>
+	</tr>
+	<tr class="resume-table__row">
+		<td>Nov 2010 – Aug 2012</td>
+		<td>
+			<div class="italic">Lead Front-End Engineer</div>
 
-            Designed, architected, and implemented a complex, multi-tiered system from the ground up using ColdFusion/MSSQL on the back end, with ExtJS front end applications.
-            Applications developed included: Student Information System (SIS), Grade Book, Report Cards System, Lesson Planner, Attendance System, Personnel Management System, and a wide range of other administrative applications to manage classes, grading scales, etc.
-            Managed company contracts, requests, and all other company software processes.
-        </td>
-    </tr>
+			<ul>
+				<li>
+					Responsible for implementing the full content display
+					solution, and its editing tools.
+				</li>
+				<li>
+					Built out the architecture of the system, rewrote and
+					maintained the internal library, and built a structured
+					framework for UI components to allow for the instantiation
+					of dynamically generated, feature rich controls based on
+					metadata.
+				</li>
+			</ul>
+		</td>
+	</tr>
 
-    <!-- EdSolution -->
-    <tr>
-        <td></td>
-        <td>Standards Solution, Inc. Parsippany, NJ</td>
-    </tr>
-    <tr>
-        <td>
-            Jul 2000 – Jun 2008<br />
-            Part/full time during high
-            school and college.
-        </td>
-        <td>
-            Senior Developer, Database Administrator
+	<!-- EdSoft Design -->
+	<tr>
+		<td></td>
+		<td>
+			<div class="bold">Educational Software Design, LLC. Morris Plains, NJ</div>
+			Small startup company providing web-based software to New Jersey
+			school districts, specializing in student data management
+			applications, testing scores, state reporting, and district-specific
+			management software.
+		</td>
+	</tr>
+	<tr class="resume-table__row">
+		<td>Jun 2008 – Nov 2010</td>
+		<td>
+			<div class="italic">President, Lead Software Developer</div>
 
-            Responsible for the software component of company contracts, building out pages and systems to satisfy customer requirements.
-            Developed extensive rich web-based user interface applications using HTML, CSS, JavaScript and AJAX, with ColdFusion Application Server supported by Microsoft SQL Server on the backend.
-            Responsibilities also included database server administration and development, which encompassed the entire database solution from table design to stored procedure implementation code and maintenance activities.
-        </td>
-    </tr>
+			<ul>
+				<li>
+					Designed, architected, and implemented a complex,
+					multi-tiered system from the ground up using ColdFusion/MSSQL
+					on the back end, with ExtJS front end applications.
+				</li>
+				<li>
+					Applications developed included: Student Information System
+					(SIS), Grade Book, Report Cards System, Lesson Planner,
+					Attendance System, Personnel Management System, and a wide
+					range of other administrative applications to manage classes,
+					grading scales, etc.
+				</li>
+				<li>
+					Managed company contracts, requests, and all other company
+					software processes.
+				</li>
+			</ul>
+		</td>
+	</tr>
 
+	<!-- EdSolution -->
+	<tr>
+		<td></td>
+		<td class="bold">Standards Solution, Inc. Parsippany, NJ</td>
+	</tr>
+	<tr class="resume-table__row">
+		<td>
+			Jul 2000 – Jun 2008<br />
+			Part/full time during high
+			school and college.
+		</td>
+		<td>
+			<div class="italic">Senior Developer, Database Administrator</div>
+
+			<ul>
+				<li>
+					Responsible for the software component of company contracts,
+					building out pages and systems to satisfy customer
+					requirements.
+				</li>
+				<li>
+					Developed extensive rich web-based user interface
+					applications using HTML, CSS, JavaScript and AJAX, with
+					ColdFusion Application Server supported by Microsoft SQL
+					Server on the backend.
+				</li>
+				<li>
+					Responsibilities also included database server
+					administration and development, which encompassed the entire
+					database solution from table design to stored procedure
+					implementation code and maintenance activities.
+				</li>
+			</ul>
+		</td>
+	</tr>
 </table>
 
 
