Add email to resume.

--- a/resume/index.html
+++ b/resume/index.html
@@ -8,7 +8,7 @@ permalink: /resume/
 <div class="text-center">333 River St, Apt 909</div>
 <div class="text-center">Hoboken, New Jersey 07030</div>
 <div class="text-center">(973) 768-5511</div>
-<div class="text-center">E-mail: greg |at| greg-jacobs.com</div>
+<div class="text-center">E-mail: <a href="mailto:{{ site.email }}">{{ site.email }}</a></div>
 <div class="text-center">Github: <a href="https://github.com/gregjacobs">https://github.com/gregjacobs</a></div>
 
 <table class="resume-table mt10">
