--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ permalink: /
 
 <p>
     <img src="{{ site.baseurl }}/images/Gregory-Jacobs.jpg" class="right pl5 pb5" />
-    Hello, my name is Gregory Jacobs. I am a software engineer with 15 years of
+    Hello, my name is Gregory Jacobs. I am a software engineer with 
+    <script>document.write((new Date()).getFullYear() - 2000);</script> years of
     experience in web application development. I mainly specialize in developing
     rich, front end applications using HTML/CSS/JavaScript and ExtJS / AngularJS /
     jQuery, but I have also done heavy backend work using ColdFusion, PHP, Java, and
