Update about info

--- a/index.html
+++ b/index.html
@@ -7,8 +7,18 @@ permalink: /
 <p>
     <img src="{{ site.baseurl }}/images/Gregory-Jacobs.jpg" class="right pl5 pb5" />
     Hello, my name is Gregory Jacobs. I am a software engineer with 
-    <script>document.write((new Date()).getFullYear() - 2000);</script> years of
-    experience in web application development. I mainly specialize in developing
+    <script>document.write(Math.floor(((new Date()).valueOf() - new Date(2000, 6, 1).valueOf())/1000/60/60/24/365));</script>
+    years of experience in web application development. 
+</p>
+
+<p>Highly proficient and experienced with JavaScript/TypeScript, and modern front-end libraries such as React along with the architecture/patterns to design efficient and maintainable front-end systems.</p>
+
+<p>Have been both a full stack engineer (ColdFusion / Java / PHP / ASP / MSSQL on the backend), and fully-dedicated frontend engineer. In addition to working extensively with React and Angular on the front-end, have also worked with many past front-end libraries and frameworks such as AngularJS, ExtJS, jQuery, and YUI.</p>
+
+<p>Have also had a large focus on and have deep knowledge of: JavaScript build tooling, CI pipelines, test tools, effective testing patterns, codemods, monorepos + scaling for large projects, and many other areas of Web, Node.js, and other development. In addition, I enjoy contributing to Java, Go, and other projects when the opportunities arise.</p>
+<!--
+<p>
+    I mainly specialize in developing
     rich, front end applications using HTML/CSS/JavaScript and ExtJS / AngularJS /
     jQuery, but I have also done heavy backend work using ColdFusion, PHP, Java, and
     Microsoft SQL Server. I am an expert in JavaScript, and besides ExtJS and jQuery,
@@ -23,4 +33,4 @@ permalink: /
     also enjoy programming in and have experience using other languages such as Java,
     C++, and C#. I also enjoy database development using SQL Server, and have worked
     with other DBMS's such as Oracle, MySQL, and PostgreSQL.
-</p>
+</p>-->
