--- a/resume/index.html
+++ b/resume/index.html
@@ -5,12 +5,13 @@ permalink: /resume/
 ---
 
 <div class="text-center">Gregory L. Jacobs</div>
-<div class="text-center">333 River St, Apt 909</div>
-<div class="text-center">Hoboken, New Jersey 07030</div>
 <div class="text-center">(973) 768-5511</div>
 <div class="text-center">E-mail: <a href="mailto:{{ site.email }}">{{ site.email }}</a></div>
-<div class="text-center">Github: <a href="https://github.com/gregjacobs">https://github.com/gregjacobs</a></div>
+<div class="text-center">Github: <a href="https://github.com/gregjacobs" target="_blank">https://github.com/gregjacobs</a></div>
 
+See my fully updated r&eacute;sum&eacute; at <a href="https://www.linkedin.com/in/jacobsg/" target="_blank">https://www.linkedin.com/in/jacobsg/</a>
+
+<!--
 <table class="resume-table mt10">
 	<tr class="resume-table__row">
 		<td class="bold">Career Objective:</td>
@@ -53,7 +54,6 @@ permalink: /resume/
 		</td>
 	</tr>
 
-	<!-- Morgan Stanley -->
 	<tr>
 		<td class="bold">Related Experience:</td>
 		<td class="bold">Morgan Stanley. New York, NY</td>
@@ -86,7 +86,6 @@ permalink: /resume/
 		</td>
 	</tr>
 
-	<!-- Credit Suisse -->
 	<tr>
 		<td></td>
 		<td class="bold">Credit Suisse Group. New York, NY</td>
@@ -118,7 +117,6 @@ permalink: /resume/
 		</td>
 	</tr>
 
-	<!-- Jux -->
 	<tr>
 		<td></td>
 		<td>
@@ -148,7 +146,6 @@ permalink: /resume/
 		</td>
 	</tr>
 
-	<!-- EdSoft Design -->
 	<tr>
 		<td></td>
 		<td>
@@ -185,7 +182,6 @@ permalink: /resume/
 		</td>
 	</tr>
 
-	<!-- EdSolution -->
 	<tr>
 		<td></td>
 		<td class="bold">Standards Solution, Inc. Parsippany, NJ</td>
@@ -221,19 +217,4 @@ permalink: /resume/
 		</td>
 	</tr>
 </table>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+-->
