Update about info

--- a/resume/index.html
+++ b/resume/index.html
@@ -8,8 +8,10 @@ permalink: /resume/
 <div class="text-center">(973) 768-5511</div>
 <div class="text-center">E-mail: <a href="mailto:{{ site.email }}">{{ site.email }}</a></div>
 <div class="text-center">Github: <a href="https://github.com/gregjacobs" target="_blank">https://github.com/gregjacobs</a></div>
-
-See my fully updated r&eacute;sum&eacute; at <a href="https://www.linkedin.com/in/jacobsg/" target="_blank">https://www.linkedin.com/in/jacobsg/</a>
+<br>
+<div class="text-center">
+	See my fully updated r&eacute;sum&eacute; at <a href="https://www.linkedin.com/in/jacobsg/" target="_blank">https://www.linkedin.com/in/jacobsg/</a>
+</div>
 
 <!--
 <table class="resume-table mt10">
