--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ permalink: /
     years of experience in web application development. 
 </p>
 
-<p>Highly proficient and experienced with JavaScript/TypeScript, and modern front-end libraries such as React along with the architecture/patterns to design efficient and maintainable front-end systems.</p>
+<p>I mainly specialize in developing rich, front end applications using modern front-end libraries such as React along with the architecture/patterns to design efficient and maintainable front-end systems.</p>
 
-<p>Have been both a full stack engineer (ColdFusion / Java / PHP / ASP / MSSQL on the backend), and fully-dedicated frontend engineer. In addition to working extensively with React and Angular on the front-end, have also worked with many past front-end libraries and frameworks such as AngularJS, ExtJS, jQuery, and YUI.</p>
+<p>In my career I've been both a full stack engineer (ColdFusion / Java / PHP / ASP / MSSQL on the backend), and fully-dedicated frontend engineer. In addition to working extensively with React and Angular on the front-end, I've also worked with many past front-end libraries and frameworks such as AngularJS, ExtJS, jQuery, and YUI.</p>
 
-<p>Have also had a large focus on and have deep knowledge of: JavaScript build tooling, CI pipelines, test tools, effective testing patterns, codemods, monorepos + scaling for large projects, and many other areas of Web, Node.js, and other development. In addition, I enjoy contributing to Java, Go, and other projects when the opportunities arise.</p>
+<p>I've also had a large focus on and have deep knowledge of: JavaScript build tooling, CI pipelines, test tools, effective testing patterns, codemods, monorepos + scaling for large projects, and many other areas of Web, Node.js, and other development. In addition, I enjoy contributing to Java, Go, and other projects when the opportunities arise.</p>
 <!--
 <p>
     I mainly specialize in developing
