--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ permalink: /
 
 <p>In my career I've been both a full stack engineer (ColdFusion / Java / PHP / ASP / MSSQL on the backend), and fully-dedicated frontend engineer. In addition to working extensively with React and Angular on the front-end, I've also worked with many past front-end libraries and frameworks such as AngularJS, ExtJS, jQuery, and YUI.</p>
 
-<p>I've also had a large focus on and have deep knowledge of: JavaScript build tooling, CI pipelines, test tools, effective testing patterns, codemods, monorepos + scaling for large projects, and many other areas of Web, Node.js, and other development. In addition, I enjoy contributing to Java, Go, and other projects when the opportunities arise.</p>
+<p>I have also had a large focus on and have deep knowledge of: JavaScript build tooling, CI pipelines, test tools, effective testing patterns, codemods, monorepos + scaling for large projects, and many other areas of Web, Node.js, and other development. In addition, I enjoy contributing to Java, Go, and other projects when the opportunities arise.</p>
 <!--
 <p>
     I mainly specialize in developing
