--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@ permalink: /
     <img src="{{ site.baseurl }}/images/Gregory-Jacobs.jpg" class="right pl5 pb5" />
     Hello, my name is Gregory Jacobs. I am a software engineer with 
     <script>document.write(Math.floor(((new Date()).valueOf() - new Date(2000, 6, 1).valueOf())/1000/60/60/24/365));</script>
-    years of experience in web application development. 
-</p>
-
-<p>I mainly specialize in developing rich, front end applications using modern front-end libraries such as React along with the architecture/patterns to design efficient and maintainable front-end systems.</p>
+    years of experience in web application development. I mainly specialize in developing rich, front-end applications using modern front-end libraries such as React along with the architecture/patterns to design efficient and maintainable front-end systems.</p>
 
 <p>In my career I've been both a full stack engineer (ColdFusion / Java / PHP / ASP / MSSQL on the backend), and fully-dedicated frontend engineer. In addition to working extensively with React and Angular on the front-end, I've also worked with many past front-end libraries and frameworks such as AngularJS, ExtJS, jQuery, and YUI.</p>
 
