Rewrite about me

--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@ layout: page
 title: About Me
 permalink: /
 ---
+<img src="{{ site.baseurl }}/images/Gregory-Jacobs.jpg" class="right pl5 pb10" />
 
+<p>
+Greetings, I'm Gregory Jacobs, a seasoned software engineer with 
+<script>document.write(Math.floor(((new Date()).valueOf() - new Date(2000, 6, 1).valueOf())/1000/60/60/24/365));</script> years of expertise in crafting cutting-edge web applications. 
+</p>
+
+<p>
+My forte lies in crafting dynamic front-end solutions, leveraging contemporary libraries like React, and implementing robust architecture and patterns to ensure the efficiency and longevity of front-end systems.
+</p>
+
+<p>
+Throughout my career, I've donned various hats, transitioning seamlessly between full-stack engineering (utilizing technologies such as ColdFusion, Java, PHP, ASP, and MSSQL on the backend) and specializing exclusively in front-end development. While my primary focus revolves around React and Angular, I've honed my skills across a spectrum of front-end libraries and frameworks, including AngularJS, ExtJS, jQuery, and YUI.
+</p>
+
+<p>
+Furthermore, my expertise extends beyond front-end development; I possess in-depth knowledge of JavaScript build tooling, CI pipelines, testing methodologies, codemods, and monorepo management, ensuring seamless scalability for large-scale projects. I'm passionate about contributing to the broader development community, eagerly lending my expertise to projects in Java, Go, and beyond whenever the opportunity arises.
+</p>
+<!-- Old
 <p>
     <img src="{{ site.baseurl }}/images/Gregory-Jacobs.jpg" class="right pl5 pb5" />
     Hello, my name is Gregory Jacobs. I am a software engineer with 
@@ -13,7 +31,9 @@ permalink: /
 <p>In my career I've been both a full stack engineer (ColdFusion / Java / PHP / ASP / MSSQL on the backend), and fully-dedicated frontend engineer. In addition to working extensively with React and Angular on the front-end, I've also worked with many past front-end libraries and frameworks such as AngularJS, ExtJS, jQuery, and YUI.</p>
 
 <p>I have also had a large focus on and have deep knowledge of: JavaScript build tooling, CI pipelines, test tools, effective testing patterns, codemods, monorepos + scaling for large projects, and many other areas of Web, Node.js, and other development. In addition, I enjoy contributing to Java, Go, and other projects when the opportunities arise.</p>
-<!--
+-->
+
+<!-- Older
 <p>
     I mainly specialize in developing
     rich, front end applications using HTML/CSS/JavaScript and ExtJS / AngularJS /
